syntax = "proto3";

package api;

option go_package = "github.com/Snakdy/go-rbac-proxy/pkg/rbac";

import "google/protobuf/empty.proto";

enum Verb {
  CREATE = 0;
  READ = 1;
  UPDATE = 2;
  DELETE = 3;
  SUDO = 4;
}

message RoleBinding {
  string subject = 1;
  string resource = 2;
  Verb action = 3;
}

service Authority {
  rpc Can(AccessRequest) returns (GenericResponse);
  rpc AddRole(AddRoleRequest) returns (GenericResponse);
  rpc AddGlobalRole(AddGlobalRoleRequest) returns (GenericResponse);

  rpc ListBySub(ListBySubRequest) returns (ListResponse);
  rpc ListByRole(ListByRoleRequest) returns (ListResponse);
  rpc List(google.protobuf.Empty) returns (ListResponse);
}

message AccessRequest {
  string subject = 1;
  string resource = 2;
  Verb action = 3;
}

message GenericResponse {
  string message = 1;
  bool ok = 2;
}

message AddRoleRequest {
  string subject = 1;
  string resource = 2;
  Verb action = 3;
}

message AddGlobalRoleRequest {
  string subject = 1;
  string role = 2;
}

message ListBySubRequest {
  string subject = 1;
}

message ListByRoleRequest {
  string role = 1;
}

message ListResponse {
  repeated RoleBinding results = 1;
}